--- a/login-page/app.json
+++ b/login-page/app.json
@@ -1,33 +1,95 @@
-{
-  "expo": {
-    "name": "login-page",
-    "slug": "snack-ef01f5af-7d63-4c73-abd6-948f5886799f",
-    "version": "1.0.0",
-    "orientation": "portrait",
-    "icon": "./assets/icon.png",
-    "splash": {
-      "image": "./assets/splash.png",
-      "resizeMode": "contain",
-      "backgroundColor": "#ffffff"
-    },
-    "updates": {
-      "fallbackToCacheTimeout": 0
-    },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
-    "ios": {
-      "supportsTablet": true
-    },
-    "android": {
-      "adaptiveIcon": {
-        "foregroundImage": "./assets/adaptive-icon.png",
-        "backgroundColor": "#FFFFFF"
-      }
-    },
-    "web": {
-      "favicon": "./assets/favicon.png"
-    },
-    "description": "Example usage"
+import React, {Component} from 'react';
+import {
+  StyleSheet,
+  ImageBackground,
+  Image,
+  Text,
+  View,
+  TextInput,
+  TouchableOpacity,
+} from 'react-native';
+
+export default class App extends Component<{}> {
+  constructor(props) {
+    super(props);
+    this.state = {
+      email: '',
+      password: '',
+    };
+  }
+  render() {
+    return (
+      <View style={styles.container}>
+        <ImageBackground
+          source={require('register_top.png')}
+          resizeMode="stretch"
+          style={styles.image}>
+        <Image  source={require('logo.png')}>
+        </Image>
+        </ImageBackground>
+        <Text>{this.state.Error}</Text>
+
+        <TextInput
+          placeholder="E-Mail"
+          style={styles.myText}
+          onChangeText={email => this.setState({email})}
+        />
+
+        <TextInput
+          placeholder="Password"
+          style={styles.myText}
+          onChangeText={password => this.setState({password})}
+        />
+
+        <TouchableOpacity
+          onPress={this.myFun}
+          style={{
+            backgroundColor: '#FF8C00',
+            borderWidth: 1,
+            margin: 10,
+            padding: 10,
+            width: '90%',
+            borderRadius: 40,
+          }}>
+          <Text
+            style={{
+              color: 'white',
+              textAlign: 'center',
+              fontSize: 15,
+              fontWeight: 'bold',
+            }}>
+            LOGIN
+          </Text>
+        </TouchableOpacity>
+      </View>
+    );
   }
 }
+const styles = StyleSheet.create({
+  container: {
+    flex: 1,
+    justifyContent: 'center',
+    alignItems: 'center',
+    backgroundColor: 'white',
+  },
+  image: {
+    flex: 1,
+    justifyContent: 'center',
+    position: 'relative',
+    top: 0,
+    left: 0,
+    right:20,
+    height:330,
+    width:300,
+    
+  },
+
+  myText: {
+    borderWidth: 1,
+    borderColor: '#ccc',
+    margin: 10,
+    padding: 10,
+    width: '90%',
+    borderRadius: 40,
+  },
+});
